// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with no value and no options 1`] = `
.c2 {
  font-size: 1rem;
  line-height: 1rem;
  text-transform: inherit;
  font-weight: bold;
  line-height: normal;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  color: #5C5C5E;
}

.c3 {
  margin-top: 0.5rem;
  position: relative;
  font-size: 1.25rem;
}

.c0 {
  position: relative;
}

<div
  className="c0 TextInputWithDropdown"
  onKeyDown={[Function]}
>
  <label
    className="c1 TextInputWithDropdown__input"
    htmlFor="text-input-with-dropdown"
  >
    <span
      className="c2 Input__LabelText-bcqy1o-2"
      color="inherit"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Search for bikes",
        }
      }
      size="s"
    />
    <div
      className="c3"
    >
      
      <input
        aria-describedby="text-input-with-dropdown"
        autoComplete="off"
        className=""
        id="text-input-with-dropdown"
        name="query"
        onChange={[Function]}
        placeholder=""
        type="text"
        value=""
      />
    </div>
    
  </label>
</div>
`;

exports[`renders correctly with value and no options 1`] = `
.c2 {
  font-size: 1rem;
  line-height: 1rem;
  text-transform: inherit;
  font-weight: bold;
  line-height: normal;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  color: #5C5C5E;
}

.c3 {
  margin-top: 0.5rem;
  position: relative;
  font-size: 1.25rem;
}

.c0 {
  position: relative;
}

<div
  className="c0 TextInputWithDropdown"
  onKeyDown={[Function]}
>
  <label
    className="c1 TextInputWithDropdown__input"
    htmlFor="text-input-with-dropdown"
  >
    <span
      className="c2 Input__LabelText-bcqy1o-2"
      color="inherit"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Search for bikes",
        }
      }
      size="s"
    />
    <div
      className="c3"
    >
      
      <input
        aria-describedby="text-input-with-dropdown"
        autoComplete="off"
        className=""
        id="text-input-with-dropdown"
        name="query"
        onChange={[Function]}
        placeholder=""
        type="text"
        value="bikes"
      />
    </div>
    
  </label>
</div>
`;

exports[`renders correctly with value and options 1`] = `
.c2 {
  font-size: 1rem;
  line-height: 1rem;
  text-transform: inherit;
  font-weight: bold;
  line-height: normal;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c8 {
  font-size: 1rem;
  line-height: 1rem;
  text-transform: inherit;
  line-height: normal;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  color: #5C5C5E;
}

.c3 {
  margin-top: 0.5rem;
  position: relative;
  font-size: 1.25rem;
}

.c0 {
  position: relative;
}

.c4 {
  z-index: 3;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  position: absolute;
  left: 0;
  max-height: 300px;
  overflow: auto;
  background-color: #FFFFFF;
  border: 1px solid;
  margin-top: -1px;
  width: 100%;
}

.c5 {
  list-style: none;
  padding: 0;
  margin: 0;
}

.c6 {
  padding: 0.5rem;
}

.c7 {
  cursor: pointer;
  border-top: 1px solid #F4F3F5;
}

.c7:hover,
.c7:focus {
  background-color: #F4F3F5;
}

@media (min-width:740px) {
  .c4 {
    max-width: 500px;
  }
}

<div
  className="c0 TextInputWithDropdown"
  onKeyDown={[Function]}
>
  <label
    className="c1 TextInputWithDropdown__input"
    htmlFor="text-input-with-dropdown"
  >
    <span
      className="c2 Input__LabelText-bcqy1o-2"
      color="inherit"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Search for bikes",
        }
      }
      size="s"
    />
    <div
      className="c3"
    >
      
      <input
        aria-describedby="text-input-with-dropdown"
        autoComplete="off"
        className=""
        id="text-input-with-dropdown"
        name="query"
        onChange={[Function]}
        placeholder=""
        type="text"
        value="c"
      />
    </div>
    
  </label>
  <div
    className="c4 TextInputWithDropdown__options"
  >
    <ul
      className="c5"
      onBlur={[Function]}
      role="listbox"
    >
      <li
        aria-selected={false}
        className="c6 c7"
        id="option-0"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="option"
        tabIndex="-1"
      >
        <span
          className="c8"
          color="inherit"
          size="s"
        >
          Canyon
        </span>
      </li>
      <li
        aria-selected={false}
        className="c6 c7"
        id="option-1"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="option"
        tabIndex="-1"
      >
        <span
          className="c8"
          color="inherit"
          size="s"
        >
          Cannondale
        </span>
      </li>
      <li
        aria-selected={false}
        className="c6 c7"
        id="option-2"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="option"
        tabIndex="-1"
      >
        <span
          className="c8"
          color="inherit"
          size="s"
        >
          Condor
        </span>
      </li>
      <li
        aria-selected={false}
        className="c6 c7"
        id="option-3"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="option"
        tabIndex="-1"
      >
        <span
          className="c8"
          color="inherit"
          size="s"
        >
          Cube
        </span>
      </li>
    </ul>
  </div>
</div>
`;
